Fixed spacing and removed my name from lit of guest authors

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -34,15 +34,18 @@ body {
 /**
  * Set `margin-bottom` to maintain vertical rhythm
  */
-h1, h2, h3, h4, h5, h6,
+h1, h3, h4, h5, h6,
 p, blockquote, pre,hr,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 10;
+  margin-bottom: $spacing-unit ;
 }
 
 
 
+h2 {
+  margin-bottom: $spacing-unit/3 ;
+}
 
 
 /**
